# sim_wgpu

./: Cargo.toml  src.7z
src/: compute_shader.wgsl  main.rs  particle.rs  particle_shader.wgsl  quadtree.rs
