[package]
name = "sim_wgpu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.27.2"
env_logger = "0.10"
log = "0.4"
wgpu = "0.17"
tokio = { version = "*", features = ["full"] }
bytemuck = { version = "*", features = ["derive"] }
image = { version = "*", default-features = false, features = ["png"] }
anyhow = "*"
cgmath = "*"
imgui = "0.11.0"
imgui-winit-support = "0.11.0"
imgui-wgpu = "*"
futures-channel = "0.3.28"
futures = "*"
rand = "*"